# erlang-dbus

./: .dir-locals.el  .gitignore  .travis.yml  AUTHORS  AUTHORS.md  ChangeLog  Makefile  Makefile.am  README  README.md  _build.cfg  app.mk  bootstrap  configure.ac  erlang.mk  rebar  rebar.config  rebar3  rules.mk
.github/: FUNDING.yml
.github/workflows/: erlang.yml
.rebar/: erlcinfo
dberl/src/: Makefile.am
dbus/ebin/: dbus.app
dbus/include/: dbus.hrl
dbus/src/: dberl.erl  dberl.rel.in  dbus.app-in  dbus.erl  dbus.hrl  dbus_auth.erl  dbus_bus.erl  dbus_bus_reg.erl  dbus_connection.erl  dbus_introspect.erl  dbus_marshaller.erl  dbus_message.erl  dbus_proxy.erl  dbus_remote_service.erl  dbus_service.erl  dbus_service_reg.erl  dbus_sup.erl  dbus_tcp_conn.erl  dbus_transport.erl  dbus_unix_conn.erl  gen_dbus.erl
dbus_demo/ebin/: dbus_demo.app  hello.app
dbus_demo/priv/: hello.py
dbus_demo/src/: dbus.erl  dbus_demo.erl  dbus_demo_app.erl  dbus_demo_hello.erl  dbus_demo_sup.erl  dbus_example_client.erl
demo/: Makefile
demo/src/: dbus_demo.erl  dbus_demo_app.erl  dbus_demo_hello.erl  dbus_demo_sup.erl  dbus_example_client.erl  dbus_list_system_services.erl
demo/test/: dbus_demo_test.erl  session.conf
doc/: README.md  auth_state_diagram.dia  dbus.md  dbus_auth.md  dbus_auth_anonymous.md  dbus_auth_cookie_sha1.md  dbus_auth_external.md  dbus_bus.md  dbus_bus_connection.md  dbus_bus_reg.md  dbus_connection.md  dbus_constants.md  dbus_hex.md  dbus_introspect.md  dbus_marshaller.md  dbus_message.md  dbus_names.md  dbus_peer_connection.md  dbus_properties_proxy.md  dbus_proxy.md  dbus_remote_service.md  dbus_service.md  dbus_service_reg.md  dbus_sup.md  dbus_transport.md  dbus_transport_tcp.md  dbus_transport_unix.md  introspect.xml  introspect2.xml  introspect3.xml  introspect_pk.xml  introspect_trans.xml  overview.edoc  rythmbox-shell.xml  rythmbox.xml
example/: Makefile.am  dbus.erl  hello.app-in  hello.erl  hello.py  hello.rel.in  hello_app.erl
include/: Makefile.am  config.hrl.in  dbus.hrl  dbus_client.hrl  dbus_dbus.hrl  dbus_errors.hrl  dbus_introspectable.hrl  dbus_object_manager.hrl  dbus_peer.hrl  dbus_properties.hrl
m4/: erlang.m4
rules/: app.mk  rules.mk
src/: Makefile  Makefile.am  call.erl  connection.erl  dberl.app  dberl.erl  dberl.rel  dberl.rel.in  dbus.app.src  dbus.erl  dbus.hrl  dbus_auth.erl  dbus_auth_anonymous.erl  dbus_auth_cookie_sha1.erl  dbus_auth_external.erl  dbus_bus.erl  dbus_bus_connection.erl  dbus_bus_reg.erl  dbus_call.erl  dbus_connection.erl  dbus_constants.erl  dbus_hex.erl  dbus_introspect.erl  dbus_marshaller.erl  dbus_message.erl  dbus_names.erl  dbus_objects_manager.erl  dbus_peer_connection.erl  dbus_properties_proxy.erl  dbus_proxy.erl  dbus_remote_service.erl  dbus_service.erl  dbus_service_reg.erl  dbus_sup.erl  dbus_tcp_conn.erl  dbus_transport.erl  dbus_transport_tcp.erl  dbus_transport_unix.erl  dbus_unix_conn.erl  gen_dbus.erl  (+9 more)
src/auth/: dbus_auth_cookie_sha1.erl  dbus_auth_external.erl
src/client/: dbus_bus_connection.erl  dbus_client.erl  dbus_objects_manager.erl  dbus_objman.erl  dbus_proxy.erl
src/core/: dbus_connection.erl  dbus_constants.erl  dbus_introspect.erl  dbus_marshaller.erl  dbus_message.erl  dbus_names.erl  dbus_peer_connection.erl  dbus_transport_tcp.erl  dbus_transport_unix.erl
src/dberl/: Makefile.am  auth.erl  bus.erl  bus_reg.erl  call.erl  connection.erl  gen_dbus.erl  hex.erl  introspect.erl  marshaller.erl  message.erl  proxy.erl  remote_service.erl  service.erl  service_reg.erl  sup.erl  tcp_conn.erl  transport.erl  unix_conn.erl
src/server/: dbus_bus.erl  dbus_bus_reg.erl  dbus_remote_service.erl  dbus_service.erl  dbus_service_reg.erl
test/: dbus.conf  dbus_client_SUITE.erl  example-client.py  example-service.py  run-dbus.sh
test/dbus_client_SUITE_data/: example-service.py  marshal.c  requirements.txt  session_tcp_anonymous.conf  (+2 more)
(+1 files in other folders)
